fix: fix dark mode styles

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100vh;
     background-color: gainsboro;
+    color: black;
 }
 
 .container {
@@ -17,7 +18,7 @@
     left: 40%;
     width: 400px;
     height: 200px;
-    border: 4px solid cadetblue;
+    border: 4px solid rosybrown;
     border-radius: 20px;
     background-color: gainsboro;
 }
@@ -25,10 +26,20 @@
 .radio-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     position: absolute;
     top: 10%;
     left: 20%;
+}
+
+.night-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    top: 10%;
 }
 
 .radio {
@@ -37,7 +48,11 @@
     align-items: center;
 }
 
-p {
+h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
     font-size: 24px;
     text-align: center;
     font-weight: bold;
@@ -50,7 +65,7 @@ p {
     align-items: center;
     width: 350px;
     height: 50px;
-    border: 3px solid cadetblue;
+    border: 3px solid rosybrown;
     border-radius: 20px;
 }
 
@@ -66,9 +81,11 @@ p {
 }
 
 .value-container {
+    display: flex;
+    flex-direction: column;
     width: 350px;
     height: 110px;
-    border: 3px solid cadetblue;
+    border: 3px solid rosybrown;
     border-radius: 20px;
     margin: 10px;
 }
@@ -85,6 +102,7 @@ p {
     width: 100px;
     height: 25px;
     text-align: center;
+    border-radius: 10px;
 }
 
 .value-spans {
